<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.comp304_assignment2.MainActivity" >

	
       <Button
           android:id="@+id/button1"
           android:layout_width="155dp"
           android:layout_height="wrap_content"
           android:text="@string/st1" />

       <Button
           android:id="@+id/button2"
           android:layout_width="155dp"
           android:layout_height="wrap_content"
           android:layout_below="@+id/button1"
           android:text="@string/st2" />
       
        <Button
           android:id="@+id/button3"
           android:layout_width="155dp"
           android:layout_height="wrap_content"
		   android:layout_below="@+id/button2"
           android:text="@string/st3" />
        
         <Button
           android:id="@+id/button4"
           android:layout_width="155dp"
           android:layout_height="wrap_content"
           android:layout_below="@+id/button3"
           android:text="@string/st4" />
         
          <Button
           android:id="@+id/button5"
           android:layout_width="155dp"
           android:layout_height="wrap_content"
           android:layout_below="@+id/button4"
           android:text="@string/st5" />
          
       <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="150px"
	        android:layout_toRightOf="@+id/button1"
	        android:src="@drawable/flag" />
       
</RelativeLayout>
